tests/ui/delegation/ice-non-fn-target-in-trait-impl.stderr
error[E0423]: expected function, found module `std::path`
  --> $DIR/ice-non-fn-target-in-trait-impl.rs:14:11
   |
LL |     reuse std::path::<> as bar;
   |           ^^^^^^^^^^^^^ not a function

error[E0423]: expected function, found crate `core`
  --> $DIR/ice-non-fn-target-in-trait-impl.rs:16:11
   |
LL |     reuse core::<> as bar2;
   |           ^^^^^^^^ not a function

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0423`.
